@@ -1,2 +1,2 @@
 # this file is generated by version.py
-SVN_REVISION = 251
+SVN_REVISION = 253
